--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         { nombre: "CREATIVIDAD E INNOVACION EMPRESARIAL", creditos: 3, tipo: "rosado", prerequisito: "-" },
         { nombre: "GIMNASIA", creditos: 1, tipo: "lila", prerequisito: "-" },
         { nombre: "INGLES BÁSICO I", creditos: 2, tipo: "lila", prerequisito: "-" },
-        { nombre: "FUTBOL", creditos: 1, tipo: "lila", prerequisito: "-" }
+        { nombre: "FUTBOL", creditos: 1, tipo: "lila", prerequisito: "-" },
       ],
       "Ciclo 2": [
         { nombre: "TEATRO", creditos: 1, tipo: "lila", prerequisito: "-" },
@@ -53,15 +53,15 @@
         { nombre: "DEFENSA PERSONAL", creditos: 1, tipo: "lila", prerequisito: "-" },
         { nombre: "REALIDAD NACIONAL Y DESARROLLO REGIONAL AMAZÓNICO", creditos: 4, tipo: "rosado", prerequisito: "-" },
         { nombre: "DANZAS", creditos: 1, tipo: "lila", prerequisito: "-" },
-        { nombre: "METODOLOGÍA DE LA INVESTIGACIÓN CIENTÍFICA", creditos: 3, tipo: "rosado", prerequisito: "-" }
-      ]
+        { nombre: "METODOLOGÍA DE LA INVESTIGACIÓN CIENTÍFICA", creditos: 3, tipo: "rosado", prerequisito: "-" },
+      ],
       "Ciclo 3": [
         { nombre: "MICROECONOMIA", creditos: 4, tipo: "fucsia", prerequisito: "FUNDAMENTOS DE ECONOMIA" },
         { nombre: "MATEMATICA III", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA II" },
         { nombre: "ESTADISTICA I", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA II" },
         { nombre: "COSTO Y PRESUPUESTO EMPRESARIAL", creditos: 3, tipo: "rosado", prerequisito: "FUNDAMENTOS DE CONTABILIDAD" },
         { nombre: "DOCTRINAS ECONOMICAS", creditos: 3, tipo: "rosado", prerequisito: "FUNDAMENTOS DE ECONOMIA" },
-        { nombre: "HISTORIA ECONOMICA DEL PERU", creditos: 3, tipo: "rosado", prerequisito: "-" }
+        { nombre: "HISTORIA ECONOMICA DEL PERU", creditos: 3, tipo: "rosado", prerequisito: "-" },
       ],
       "Ciclo 4": [
         { nombre: "SOCIOLOGIA", creditos: 2, tipo: "rosado", prerequisito: "FILOSOFIA" },
@@ -69,7 +69,7 @@
         { nombre: "ESTADISTICA II", creditos: 4, tipo: "rosado", prerequisito: "ESTADISTICA I" },
         { nombre: "MATEMATICA FINANCIERA", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA II" },
         { nombre: "ANALISIS MICROECONOMICO", creditos: 4, tipo: "fucsia", prerequisito: "MICROECONOMIA" },
-        { nombre: "MATEMATICA IV", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA III" }
+        { nombre: "MATEMATICA IV", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA III" },
       ],
       "Ciclo 5": [
         { nombre: "ANALISIS Y GESTION DE RIESGO", creditos: 3, tipo: "rosado", prerequisito: "MATEMATICA IV" },
@@ -77,7 +77,7 @@
         { nombre: "PROGRAMAS INFORMATICOS PARA LA ECONOMIA", creditos: 4, tipo: "rosado", prerequisito: "ESTADISTICA II" },
         { nombre: "ECONOMIA DE RECURSOS NATURALES Y MEDIO AMBIENTE", creditos: 4, tipo: "fucsia", prerequisito: "ANALISIS MICROECONOMICO" },
         { nombre: "RESPONSABILIDAD SOCIAL", creditos: 2, tipo: "rosado", prerequisito: "-" },
-        { nombre: "MACROECONOMIA", creditos: 4, tipo: "fucsia", prerequisito: "FUNDAMENTOS DE ECONOMIA" }
+        { nombre: "MACROECONOMIA", creditos: 4, tipo: "fucsia", prerequisito: "FUNDAMENTOS DE ECONOMIA" },
       ],
       "Ciclo 6": [
         { nombre: "ANALISIS MACROECONOMICO", creditos: 4, tipo: "fucsia", prerequisito: "MACROECONOMIA" },
@@ -85,7 +85,7 @@
         { nombre: "DEONTOLOGIA PROFESIONAL", creditos: 3, tipo: "rosado", prerequisito: "-" },
         { nombre: "OPTIMIZACION ECONOMICA", creditos: 4, tipo: "rosado", prerequisito: "MATEMATICA IV" },
         { nombre: "INVESTIGACION DE MERCADOS", creditos: 4, tipo: "rosado", prerequisito: "PROGRAMAS INFORMATICOS PARA LA ECONOMIA" },
-        { nombre: "ECONOMETRIA I", creditos: 4, tipo: "rosado", prerequisito: "ESTADISTICA II" }
+        { nombre: "ECONOMETRIA I", creditos: 4, tipo: "rosado", prerequisito: "ESTADISTICA II" },
       ],
       "Ciclo 7": [
         { nombre: "ECONOMIA FINANCIERA", creditos: 4, tipo: "fucsia", prerequisito: "CONTABILIDAD GERENCIAL" },
@@ -94,7 +94,7 @@
         { nombre: "ECONOMETRIA II", creditos: 4, tipo: "rosado", prerequisito: "ECONOMETRIA I" },
         { nombre: "SEMINARIO DE CUENTAS NACIONALES", creditos: 3, tipo: "rosado", prerequisito: "MACROECONOMIA" },
         { nombre: "FORMULACION Y EVALUACION DE PROYECTOS I", creditos: 4, tipo: "rosado", prerequisito: "INVESTIGACION DE MERCADOS" },
-        { nombre: "DERECHO ECONOMICO", creditos: 3, tipo: "rosado", prerequisito: "DERECHO CONSTITUCIONAL Y DERECHOS HUMANOS" }
+        { nombre: "DERECHO ECONOMICO", creditos: 3, tipo: "rosado", prerequisito: "DERECHO CONSTITUCIONAL Y DERECHOS HUMANOS" },
       ],
       "Ciclo 8": [
         { nombre: "PLANIFICACION ESTRATEGICA", creditos: 4, tipo: "rosado", prerequisito: "ANALISIS MACROECONOMICO" },
@@ -103,7 +103,7 @@
         { nombre: "TEORIA DEL CRECIMIENTO Y DESARROLLO", creditos: 4, tipo: "fucsia", prerequisito: "ANALISIS MACROECONOMICO" },
         { nombre: "SEMINARIO DE BANCA Y DE SEGUROS", creditos: 3, tipo: "rosado", prerequisito: "ANALISIS Y GESTION DE RIESGO" },
         { nombre: "FORMULACION Y EVALUACION DE PROYECTOS II", creditos: 4, tipo: "rosado", prerequisito: "FORMULACION Y EVALUACION DE PROYECTOS I" },
-        { nombre: "TOPICOS DE ECONOMETRIA", creditos: 3, tipo: "rosado", prerequisito: "ECONOMETRIA II" }
+        { nombre: "TOPICOS DE ECONOMETRIA", creditos: 3, tipo: "rosado", prerequisito: "ECONOMETRIA II" },
       ],
       "Ciclo 9": [
         { nombre: "SEMINARIO DE ECONOMIA TRIBUTARIA", creditos: 3, tipo: "rosado", prerequisito: "ECONOMIA FINANCIERA" },
@@ -111,14 +111,14 @@
         { nombre: "SEMINARIO DE TENDENCIAS Y PERSPECTIVAS ECONOMICAS", creditos: 2, tipo: "rosado", prerequisito: "TEORIA DEL CRECIMIENTO Y DESARROLLO" },
         { nombre: "SEMINARIO DE DEMOGRAFIA Y REALIDAD SOCIOECONOMICAS", creditos: 3, tipo: "rosado", prerequisito: "MACROECONOMIA" },
         { nombre: "SEMINARIO DE TESIS", creditos: 4, tipo: "rosado", prerequisito: "METODOLOGÍA DE LA INVESTIGACIÓN CIENTÍFICA" },
-        { nombre: "POLITICA ECONOMICA", creditos: 4, tipo: "fucsia", prerequisito: "PLANIFICACION ESTRATEGICA" }
+        { nombre: "POLITICA ECONOMICA", creditos: 4, tipo: "fucsia", prerequisito: "PLANIFICACION ESTRATEGICA" },
       ],
       "Ciclo 10": [
         { nombre: "TRABAJO DE INVESTIGACIÓN", creditos: 5, tipo: "rosado", prerequisito: "SEMINARIO DE TESIS" },
         { nombre: "ECONOMIA REGIONAL", creditos: 3, tipo: "fucsia", prerequisito: "COMERCIO INTERNACIONAL" },
         { nombre: "PRACTICA PRE PROFESIONAL", creditos: 5, tipo: "rosado", prerequisito: "-" },
-        { nombre: "ECONOMIA Y GESTION PUBLICA", creditos: 4, tipo: "rosado", prerequisito: "POLITICA ECONOMICA" }
-      ]
+        { nombre: "ECONOMIA Y GESTION PUBLICA", creditos: 4, tipo: "rosado", prerequisito: "POLITICA ECONOMICA" },
+      ],
     };
 
     renderMalla();
